--- a/remote_config.json
+++ b/remote_config.json
@@ -1,1 +1,10 @@
 
+{
+  "showAds":false,
+  "adsInterval":30,
+  "showAppOpenAd":true,
+  "showFirstAd":true,
+  "showTestAds":true,
+  "interstitialAdUnit":"",
+  "openAppAdUnitId":""
+}
