--- a/remote_config.json
+++ b/remote_config.json
@@ -5,7 +5,7 @@
   "showAppOpenAd":false,
   "showFirstAd":false,
   "showInterstitial":false,
-  "showTestAds":false,
+  "showTestAds":true,
   "showBannerAds":true,
   "bannerAdUnit":"ca-app-pub-7996006950744275/2167366283",
   "interstitialAdUnit":"ca-app-pub-7996006950744275/8541202943",
