--- a/remote_config.json
+++ b/remote_config.json
@@ -10,5 +10,5 @@
   "bannerAdUnit":"ca-app-pub-7996006950744275/2167366283",
   "interstitialAdUnit":"ca-app-pub-7996006950744275/8541202943",
   "openAppAdUnitId":"ca-app-pub-7996006950744275/3726207573",
-  "showNews":true
+  "showNews":false
 }
